--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -14,7 +14,7 @@
             why this is awesome
          </h2>
          <div class="line"></div>
-         <div class="text">
+         <div class="description">
             <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
