--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -51,7 +51,7 @@
                   <img src="./img/image mol.jpg" alt="#">
                </div> 
                <h3 class="awesome-card__title">
-                  Easy to Customize
+                  Easy To Customize
                </h3>
                <div class="wesome-card__text">
                   <p>
