--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -27,7 +27,7 @@
                <h3 class="awesome-card__title">
                   Thoughtful Design
                </h3>
-               <div class="wesome-card__text">
+               <div class="awesome-card__text">
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
                   </p>
@@ -40,7 +40,7 @@
                <h3 class="awesome-card__title">
                   Well Crafted
                </h3>
-               <div class="wesome-card__text">
+               <div class="awesome-card__text">
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
                   </p>
@@ -53,7 +53,7 @@
                <h3 class="awesome-card__title">
                   Easy To Customize
                </h3>
-               <div class="wesome-card__text">
+               <div class="awesome-card__text">
                   <p>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
                   </p>
