--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -8,13 +8,14 @@
    <title>Document</title>
 </head>
 <body>
+
    <section class="awesome">
       <div class="conteiner">
          <h2 class="title">
             why this is awesome
          </h2>
          <div class="line"></div>
-         <div class="description">
+         <div class="awesome-description">
             <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
@@ -59,6 +60,109 @@
                   </p>
                </div>
             </div>
+         </div>
+      </div>
+   </section>
+
+   <section class="pricing">
+      <div class="conteiner">
+         <h2 class="title">
+            pricing options
+         </h2>
+         <div class="line"></div>
+         <div class="pricing-description">
+            <p>
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+         </div>
+         <div class="pricing-wrap">
+            <ul class="pricing-card">
+               <li class="pricing-card-title">
+                  Basic
+               </li>
+               <li class="pricing-card-title-1">
+                  $10
+               </li>
+               <li class="pricing-card-title-2">
+                  Free for life
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+            </ul>
+            <ul class="pricing-card">
+               <li class="pricing-card-title">
+                  Optima
+               </li>
+               <li class="pricing-card-title-1">
+                  $20
+               </li>
+               <li class="pricing-card-title-2">
+                  Free for life
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+            </ul>
+            <ul class="pricing-card">
+               <li class="pricing-card-title">
+                  Pro
+               </li>
+               <li class="pricing-card-title-1">
+                  $30
+               </li>
+               <li class="pricing-card-title-2">
+                  Free for life
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+               <li class="pricing-card-title-3">
+                  1 gb of space
+               </li>
+            </ul>
          </div>
       </div>
    </section>
