--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -77,89 +77,89 @@
          </div>
          <div class="pricing-wrap">
             <ul class="pricing-card">
-               <li class="pricing-card-title">
+               <li class="pricing-card-text">
                   Basic
                </li>
-               <li class="pricing-card-title-1">
+               <li class="pricing-card-text-1">
                   $10
                </li>
-               <li class="pricing-card-title-2">
+               <li class="pricing-card-text-2">
                   Free for life
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
             </ul>
             <ul class="pricing-card">
-               <li class="pricing-card-title">
+               <li class="pricing-card-text">
                   Optima
                </li>
-               <li class="pricing-card-title-1">
+               <li class="pricing-card-text-1">
                   $20
                </li>
-               <li class="pricing-card-title-2">
+               <li class="pricing-card-text-2">
                   Free for life
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
             </ul>
             <ul class="pricing-card">
-               <li class="pricing-card-title">
+               <li class="pricing-card-text">
                   Pro
                </li>
-               <li class="pricing-card-title-1">
+               <li class="pricing-card-text-1">
                   $30
                </li>
-               <li class="pricing-card-title-2">
+               <li class="pricing-card-text-2">
                   Free for life
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
-               <li class="pricing-card-title-3">
+               <li class="pricing-card-text-3">
                   1 gb of space
                </li>
             </ul>
