--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -166,5 +166,141 @@
          </div>
       </div>
    </section>
+
+   <section class="customers">
+      <div class="conteiner">
+         <h2 class="title">
+            what our customers are saying
+         </h2>
+         <div class="line"></div>
+         <div class="customers-description">
+            <p>
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+         </div>
+         <div class="customers-wrap">
+            <div class="customers-card">
+               <div class="customers-card__text">
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                  </p>
+               </div>
+               <div class="customers-card-1">
+                  <div class="customers-card__img">
+                     <img src="./img/link skyward sword.jpg" alt="#">
+                  </div>
+                  <div class="customers-text">
+                     <h3>
+                        Link
+                     </h3>
+                     <p>
+                        Savior
+                     </p>
+                  </div>
+               </div>
+            </div>
+            <div class="customers-card">
+               <div class="customers-card__text">
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                  </p>
+               </div>
+               <div class="customers-card-1">
+                  <div class="customers-card__img">
+                     <img src="./img/link breath of the wild link.jpg" alt="#">
+                  </div>
+                  <div class="customers-text">
+                     <h3>
+                        Link
+                     </h3>
+                     <p>
+                        Savior
+                     </p>
+                  </div>
+               </div>
+            </div>
+            <div class="customers-card">
+               <div class="customers-card__text">
+                  <p>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                  </p>
+               </div>
+               <div class="customers-card-1">
+                  <div class="customers-card__img">
+                     <img src="./img/link twilight princess.jpg" alt="#">
+                  </div>
+                  <div class="customers-text">
+                     <h3>
+                        Link
+                     </h3>
+                     <p>
+                        Savior
+                     </p>
+                  </div>
+               </div>
+            </div>    
+         </div>  
+   </section>
+
+   <section class="axure">
+      <div class="axure-conteiner">
+         <h2 class="axure-title">
+            stylish axure design
+         </h2>
+         <div class="axure-line"></div>
+         <div class="axure-description">
+            <p>
+               Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+            </p>
+         </div>
+         <a href="newname" class="axure-link"><span>Dowload</span></a>
+      </div>
+   </section>
+
+   <!-- <section class="contact">
+      <div class="conteiner">
+         <h2 class="title">
+            contact us
+         </h2>
+         <div class="line"></div>
+         <div class="contact-description">
+            <p>
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+         </div>
+         <div class="contact-wrap">
+            <div class="contact-card-1">
+               <p>
+                  Name
+               </p>   
+               <div class="contact-line"></div>
+               <p>
+                  Email
+               </p>
+               <div class="contact-line"></div>            
+               <p>
+                  Password
+               </p>
+               <div class="contact-line"></div>
+            </div>  
+            <div class="contact-card-2">
+               <p>
+                  Message
+               </p>
+               <div class="contact-line"></div>
+            </div>
+         </div>  
+         <a href="адрес_ссылки">Dowload</a>
+         <div class="contact-ddv">
+            <div class="contact-ddv-img">
+               <img src=".#" alt="#">
+         </div>
+         <div class="contact-ddv-text">
+         <p>
+            © 2015 Axure Themes
+         </p>
+         </div>
+      </div>   
+   </section>                   -->
 </body>
 </html>
