--- a/Homework 3/Index3.html
+++ b/Homework 3/Index3.html
@@ -253,7 +253,7 @@
                Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
             </p>
          </div>
-         <a href="newname" class="axure-link"><span>Dowload</span></a>
+         <a href="newname" class="axure-link">Dowload</a>
       </div>
    </section>
 
