--- a/Homework 3/Index.html
+++ b/Homework 3/Index.html
@@ -41,7 +41,42 @@
       </div>
    </header>
 
-   <section>
+   <section class="modern">
+      <div class="conteiner">
+         <div class="modern-wrap">
+            <div class="modern-icons">
+               <a href="AXIT" class="modern-icons-logo">
+                  <span class="modern-icons-logo-start">AX</span>
+                  <span class="modern-icons-logo-end">IT</span>
+               </a>
+               <h1 class="modern-title">
+                  MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+               </h1>
+               <p class="modern-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
+               </p>
+               <a href="newname" class="modern-link">Dowload</a>
+            </div>
+            <div class="modern-form">
+               <form name="form" action="#" method="POST">
+                 <h3 class="modern-form-text">
+                   Try Your <span>Free</span> Trial Today
+                 </h3>
+                 <div class="item">
+                   <label for="name" id="name-label">Name</label>
+                   <input type="text" name="userName" id="name">
+                   <label for="email" id="email-label">Email</label>
+                   <input type="text" name="email" id="email">
+                   <label for="password" id="password-label">Password</label>
+                   <input type="password" class="input-password" name="password" id="password">
+                 </div>
+                 <button type="submit" name="modern-form-button">Get Started</button>
+               </form>
+             </div>
+         </div>
+      </div>
+   </section>
+
       <div class="social">
          <div class="conteiner">
             <div class="social-wrap">
@@ -55,25 +90,37 @@
                </div>
                <div class="social-icons">
                   <a href="facebook" class="social-icons-link">
-                     <i class="fa-brands fa-facebook-f"></i>
+                     <i class="fa-brands fa-facebook-f fa-facebook-f-aloc"></i>
                   </a>
+               </div>
+               <div class="social-icons">
                   <a href="twitter" class="social-icons-link">
-                     <i class="fa-brands fa-twitter"></i>
+                     <i class="fa-brands fa-twitter fa-twitter-aloc"></i>
                   </a>
+               </div>
+               <div class="social-icons">
                   <a href="google plus" class="social-icons-link">
-                     <i class="fa-brands fa-google-plus-g"></i>
+                     <i class="fa-brands fa-google-plus-g fa-google-plus-g-aloc"></i>
                   </a>
+               </div>
+               <div class="social-icons">
                   <a href="pinterest" class="social-icons-link">
-                     <i class="fa-brands fa-pinterest"></i>
-                  </a>
+                     <i class="fa-brands fa-pinterest fa-pinterest-aloc"></i>
+                  </a>  
+               </div>
+               <div class="social-icons">
                   <a href="instagram" class="social-icons-link">
-                     <i class="fa-brands fa-instagram"></i>
+                     <i class="fa-brands fa-instagram fa-instagram-aloc"></i>
                   </a>
+               </div>
+               <div class="social-icons">
                   <a href="stumbleupon" class="social-icons-link">
-                     <i class="fa-brands fa-stumbleupon"></i>
+                     <i class="fa-brands fa-stumbleupon fa-stumbleupon-aloc"></i>
                   </a>
+               </div>
+               <div class="social-icons">
                   <a href="wifi" class="social-icons-link">
-                     <i class="fa-solid fa-wifi"></i>
+                     <i class="fa-solid fa-wifi fa-wifi-aloc"></i>
                   </a>
                </div>
             </div>
@@ -329,43 +376,40 @@
       </div>
    </section>
 
-   <!-- <section class="contact">
+   <section class="contact">
       <div class="conteiner">
          <h2 class="title">
             contact us
          </h2>
-         <div class="line"></div>
          <div class="contact-description">
             <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
          </div>
-         <div class="contact-wrap">
-            <div class="contact-card-1">
-               <p>
-                  Name
-               </p>   
-               <div class="contact-line"></div>
-               <p>
-                  Email
-               </p>
-               <div class="contact-line"></div>            
-               <p>
-                  Password
-               </p>
-               <div class="contact-line"></div>
-            </div>  
-            <div class="contact-card-2">
-               <p>
-                  Message
-               </p>
-               <div class="contact-line"></div>
+         <form name="contact" action="#" method="POST">
+         <div class="contact-container">
+            <div class="form">
+              <div class="contact-form">
+                <label for="name">Name</label>
+                <input type="text" name="userName">
+                <label for="email">Email</label>
+                <input type="text" name="email" >
+                <label for="password">Password</label>
+                <input type="text" class="password">
+              </div>
+              <div class="contact-card-item">
+                <div class="content-item">
+                  <label for="message">Message</label>
+                     <textarea name="message"></textarea>
+                </div>
+              </div>
             </div>
-         </div>  
-         <a href="адрес_ссылки">Dowload</a>
-         </div>
-      </div>   
-   </section>                   -->
+            <div class="contact-button">
+              <button type="submit" name="contact-button">Send Message</button>
+            </div>
+          </div>
+        </form> 
+   </section>                  
 
    <footer class="footer">
       <div class="conteiner">
@@ -378,7 +422,7 @@
                   <i class="fa-brands fa-twitter"></i>
                </a>
                <a href="google plus" class="footer-icons-link">
-                  <i class="fa-brands fa-google-plus-g"></i>
+                  <i class="fa-brands fa-google-plus-g "></i>
                </a>
                <a href="pinterest" class="footer-icons-link">
                   <i class="fa-brands fa-pinterest"></i>
