--- a/Homework 3/Index.html
+++ b/Homework 3/Index.html
@@ -50,7 +50,7 @@
                   <span class="modern-icons-logo-end">IT</span>
                </a>
                <h1 class="modern-title">
-                  MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+                  modern axure template for beautiful prototypes
                </h1>
                <p class="modern-text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
@@ -59,18 +59,24 @@
             </div>
             <div class="modern-form">
                <form name="form" action="#" method="POST">
-                 <h3 class="modern-form-text">
-                   Try Your <span>Free</span> Trial Today
-                 </h3>
                  <div class="item">
+                  <h3 class="modern-form-text">
+                  try your <span> free </span> trial today
+                 </h3>
+                 <div class="modern-form-information">
                    <label for="name" id="name-label">Name</label>
                    <input type="text" name="userName" id="name">
+                  </div>
+                  <div class="modern-form-information">
                    <label for="email" id="email-label">Email</label>
                    <input type="text" name="email" id="email">
+                  </div>
+                  <div class="modern-form-information">
                    <label for="password" id="password-label">Password</label>
                    <input type="password" class="input-password" name="password" id="password">
+                  </div>
                  </div>
-                 <button type="submit" name="modern-form-button">Get Started</button>
+                 <button type="submit" name="modern-form-button">get started</button>
                </form>
              </div>
          </div>
@@ -128,6 +134,71 @@
       </div>
    </section>
 
+<section class="tabs">
+<div class="conteiner">
+   <div class="tab-wrap">
+   <div class="header-tab">
+      <button class="header-tab--btn active">Tab 1</button>
+      <button class="header-tab--btn">Tab 2</button>
+      <button class="header-tab--btn">Tab 3</button>
+   </div>
+   <div class="content-tab">
+      <div class="content-tab__item active">
+         <div class="content-tab__item-information">
+         <h2 class="content-tab__item-title">Tabs with soft transitioning effect.</h2>
+         <span class="content-tab__item-text">
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+         justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+         penatibus et magnis dis parturient montes.<br><br>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet.
+         </span>
+         <a href="newtab" class="content-tab__item-button">Dowload</a>
+         </div>
+         <div class="content-tab-img">
+            <img src="./img/image_right_u255@1X 1.jpg" alt="#">
+         </div>
+      </div>
+    <div class="content-tab__item" style="display: none;">
+      <div class="content-tab__item-information">
+         <h2 class="content-tab__item-title">Tabs with soft transitioning effect.</h2>
+         <span class="content-tab__item-text">
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+         justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+         penatibus et magnis dis parturient montes.<br><br>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet.
+         </span>
+         <a href="newtab" class="content-tab__item-button">Dowload</a>
+         </div>
+         <div class="content-tab-img">
+            <img src="./img/image_right_u255@1X 1.jpg" alt="#">
+         </div>
+      </div>
+    <div class="content-tab__item" style="display: none;">
+      <div class="content-tab__item-information">
+         <h2 class="content-tab__item-title">Tabs with soft transitioning effect.</h2>
+         <span class="content-tab__item-text">
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+         justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+         penatibus et magnis dis parturient montes.<br><br>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+         bibendum laoreet.
+         </span>
+         <a href="newtab" class="content-tab__item-button">Dowload</a>
+         </div>
+         <div class="content-tab-img">
+            <img src="./img/image_right_u255@1X 1.jpg" alt="#">
+         </div>
+      </div>
+    </div>
+   </div>
+   </div>
+</div>
+</section>
    <section class="awesome">
       <div class="conteiner">
          <h2 class="title">
@@ -387,15 +458,21 @@
             </p>
          </div>
          <form name="contact" action="#" method="POST">
-         <div class="contact-container">
+         <div class="contact-conteiner">
             <div class="form">
               <div class="contact-form">
+               <div class="contact-form-information">
                 <label for="name">Name</label>
                 <input type="text" name="userName">
+               </div>
+               <div class="contact-form-information">
                 <label for="email">Email</label>
                 <input type="text" name="email">
+               </div>
+               <div class="contact-form-information">
                 <label for="password">Password</label>
                 <input type="text" class="password">
+               </div>
               </div>
               <div class="contact-card-item">
                 <div class="content-item">
