--- a/Homework 3/Index.html
+++ b/Homework 3/Index.html
@@ -160,7 +160,7 @@
             <img src="./img/image_right_u255@1X 1.jpg" alt="#">
          </div>
       </div>
-    <div class="content-tab__item" style="display: none;">
+    <div class="content-tab__item-none">
       <div class="content-tab__item-information">
          <h2 class="content-tab__item-title">Tabs with soft transitioning effect.</h2>
          <span class="content-tab__item-text">
@@ -177,7 +177,7 @@
             <img src="./img/image_right_u255@1X 1.jpg" alt="#">
          </div>
       </div>
-    <div class="content-tab__item" style="display: none;">
+    <div class="content-tab__item-none">
       <div class="content-tab__item-information">
          <h2 class="content-tab__item-title">Tabs with soft transitioning effect.</h2>
          <span class="content-tab__item-text">
