--- a/Homework 3/Index.html
+++ b/Homework 3/Index.html
@@ -45,10 +45,10 @@
       <div class="conteiner">
          <div class="modern-wrap">
             <div class="modern-icons">
-               <a href="AXIT" class="modern-icons-logo">
+               <span class="modern-icons-logo">
                   <span class="modern-icons-logo-start">AX</span>
                   <span class="modern-icons-logo-end">IT</span>
-               </a>
+               </span>
                <h1 class="modern-title">
                   modern axure template for beautiful prototypes
                </h1>
